<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_22sp"
        android:text="@string/personal"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:id="@+id/textview_personal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin_10dp"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/container_local"
        android:layout_width="@dimen/width_160dp"
        android:layout_height="@dimen/height_95"
        app:layout_constraintTop_toBottomOf="@+id/textview_personal"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin_10dp"
        app:cardCornerRadius="@dimen/radius_10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/local"
            android:textColor="@color/black"
            android:gravity="center"
            android:paddingTop="@dimen/margin_10dp"
            android:textSize="@dimen/text_size_17sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dowload_40"
            android:layout_gravity="center|left"
            android:layout_marginStart="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_17sp"
            android:text="@string/local_song"
            android:id="@+id/textview_number_of_local_song"
            android:textColor="@color/black"
            android:layout_gravity="center|right"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_20dp"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/container_favorite"
        android:layout_width="@dimen/width_160dp"
        android:layout_height="@dimen/height_95"
        app:layout_constraintTop_toBottomOf="@+id/textview_personal"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/margin_10dp"
        app:cardCornerRadius="@dimen/radius_10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favo"
            android:textColor="@color/black"
            android:gravity="center"
            android:paddingTop="@dimen/margin_10dp"
            android:textSize="@dimen/text_size_17sp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite_40"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_gravity="center"/>
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_22sp"
        android:text="@string/rencent"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:id="@+id/textview_recent"
        app:layout_constraintTop_toBottomOf="@+id/container_favorite"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="@dimen/margin_20dp"
        android:layout_marginStart="@dimen/margin_10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_0dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_recent"
        tools:listitem="@layout/item_recycle_view" />

</androidx.constraintlayout.widget.ConstraintLayout>