<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroung_container"
    tools:context=".screen.search.SearchActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_24" />

        <androidx.cardview.widget.CardView
            android:id="@+id/container_searchview"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="20dp">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:iconifiedByDefault="false"
                app:queryHint="@string/search"
                app:searchIcon="@drawable/ic_search_24" />
        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/text_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:text="@string/search_result"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar"
        tools:ignore="NotSibling" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_0dp"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/container_state_song"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_search"
        tools:ignore="NotSibling"
        tools:listitem="@layout/item_recycle_view" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_state_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/cimg"
            android:layout_width="@dimen/size_circle_image"
            android:layout_height="@dimen/size_circle_image"
            android:layout_margin="@dimen/margin_7dp"
            android:src="@drawable/imgzingmp3logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingClass" />


        <TextView
            android:id="@+id/textview_song_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/name_song"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cimg"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_artist_name"
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/artist_name"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintEnd_toStartOf="@+id/button_favorite"
            app:layout_constraintStart_toStartOf="@+id/textview_song_name"
            app:layout_constraintTop_toBottomOf="@+id/textview_song_name" />

        <ImageButton
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_next_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_song_name" />

        <ImageButton
            android:id="@+id/button_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_play_24"
            app:layout_constraintEnd_toStartOf="@+id/button_next"
            app:layout_constraintTop_toBottomOf="@+id/textview_song_name" />

        <ImageButton
            android:id="@+id/button_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_favorite_24"
            app:layout_constraintEnd_toStartOf="@+id/button_play"
            app:layout_constraintTop_toBottomOf="@+id/textview_song_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>