<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroung_container"
    tools:context=".ui.DetailSongActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_24" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_song_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin_10dp"
                android:text="@string/name_song"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_17sp" />

            <TextView
                android:id="@+id/textview_artist_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin_10dp"
                android:text="@string/artist_name"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14sp" />
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_0dp"
        app:layout_constraintBottom_toTopOf="@+id/container_state_song"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar"
        tools:ignore="MissingConstraints">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_state_song"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        tools:ignore="MissingConstraints">

        <SeekBar
            android:id="@+id/seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/margin_60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.85" />

        <TextView
            android:id="@+id/textview_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20dp"
            android:text="@string/time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekbar" />

        <TextView
            android:id="@+id/textview_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:text="@string/time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekbar" />

        <ImageView
            android:id="@+id/button_favo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_30dp"
            android:layout_marginTop="@dimen/margin_30dp"
            android:src="@drawable/ic_favorite_40"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seekbar" />

        <ImageView
            android:id="@+id/button_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30dp"
            android:layout_marginEnd="@dimen/margin_30dp"
            android:src="@drawable/ic_pre_40"
            app:layout_constraintEnd_toStartOf="@+id/button_play"
            app:layout_constraintTop_toBottomOf="@id/seekbar" />

        <ImageView
            android:id="@+id/button_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_30dp"
            android:layout_marginTop="@dimen/margin_30dp"
            android:src="@drawable/ic_play_40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seekbar" />

        <ImageView
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_30dp"
            android:layout_marginTop="@dimen/margin_30dp"
            android:src="@drawable/ic_next_40"
            app:layout_constraintStart_toEndOf="@id/button_play"
            app:layout_constraintTop_toBottomOf="@id/seekbar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>