<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroung_container"
    tools:context=".screen.mainapp.MainAppActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/viewPager_main"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.cardview.widget.CardView
            android:id="@+id/container_searchview"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_marginLeft="@dimen/margin_20dp"
                android:src="@drawable/ic_search_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_marginLeft="@dimen/margin_60dp"
                android:text="@string/search"
                android:textSize="@dimen/text_size_17sp" />
        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.Toolbar>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/container_state_song"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_state_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_anchor="@id/nav_bar"
        app:layout_constraintBottom_toTopOf="@+id/nav_bar"
        app:layout_constraintTop_toBottomOf="@+id/viewPager_main">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circle_image_song"
            android:layout_width="@dimen/size_circle_image"
            android:layout_height="@dimen/size_circle_image"
            android:layout_margin="@dimen/margin_7dp"
            android:src="@drawable/imgzingmp3logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingClass" />


        <TextView
            android:id="@+id/text_song_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/circle_image_song"
            app:layout_constraintTop_toTopOf="parent"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/name_song"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16sp"/>

        <TextView
            android:id="@+id/text_artist_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/artist_name"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintEnd_toStartOf="@+id/button_favorite"
            app:layout_constraintStart_toStartOf="@+id/text_song_name"
            app:layout_constraintTop_toBottomOf="@+id/text_song_name" />

        <ImageButton
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_next_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_song_name" />

        <ImageButton
            android:id="@+id/button_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_pause_24"
            app:layout_constraintEnd_toStartOf="@+id/button_next"
            app:layout_constraintTop_toBottomOf="@+id/text_song_name" />

        <ImageButton
            android:id="@+id/button_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_favorite_24"
            app:layout_constraintEnd_toStartOf="@+id/button_play"
            app:layout_constraintTop_toBottomOf="@+id/text_song_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_state_song"
        app:menu="@menu/menu_navbar" />

</androidx.constraintlayout.widget.ConstraintLayout>
